// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescripcionInput muestra el error si existe 1`] = `
[
  <TextInput
    editable={true}
    multiline={true}
    numberOfLines={4}
    onChangeText={[Function]}
    placeholder="Descripción"
    style={
      [
        {
          "borderColor": "#ccc",
          "borderRadius": 5,
          "borderWidth": 1,
          "marginBottom": 10,
          "padding": 10,
        },
        {
          "height": 80,
          "textAlignVertical": "top",
        },
      ]
    }
    value=""
  />,
  <Text
    style={
      {
        "color": "red",
        "fontSize": 12,
      }
    }
  >
    Campo requerido
  </Text>,
]
`;

exports[`DescripcionInput se renderiza sin errores 1`] = `
<TextInput
  editable={true}
  multiline={true}
  numberOfLines={4}
  onChangeText={[Function]}
  placeholder="Descripción"
  style={
    [
      {
        "borderColor": "#ccc",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 10,
        "padding": 10,
      },
      {
        "height": 80,
        "textAlignVertical": "top",
      },
    ]
  }
  value="desc"
/>
`;
